<resources>
    <string name="app_name">School</string>

    <string name="drawer.profile">Профиль</string>
    <string name="drawer.contacts">Контакты</string>
    <string name="drawer.team">Команда</string>
    <string name="drawer.tasks">Задачи</string>
    <string name="drawer.setting">Настройки</string>

    <string name="fragment.contacts.description">Здесь будут контакты</string>
    <string name="fragment.profile.description">Здесь будет профиль</string>
    <string name="fragment.tasks.description">Здесь будут задачи</string>
    <string name="fragment.team.description">Здесь будет команда</string>
    <string name="fragment.setting.description">Здесь будут настройки</string>

    <!-- Font Family -->
    <string name="font_regular">sans-serif</string>
    <string name="font_medium">sans-serif-medium</string>

    <!-- Данные -->
    <string name="fio">Завьялова Любовь</string>
    <string name="email">Rodnoy05@mail.ru</string>
    <string name="user_rating">1</string>
    <string name="phone_number">8-9171-27-83-74</string>
    <string name="phone_label">Мобильный</string>
    <string name="e_mail">Rodnoy05@mail.ru</string>
    <string name="e_mail_label">E-mail</string>
    <string name="vk">http://vk.com/rodnoy05</string>
    <string name="vk_label">vk.com</string>
    <string name="github">rodnoy05/school-softdesign</string>
    <string name="github_label">GitHub.com</string>

</resources>
