<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="@dimen/nav_header_heigth">
   <!-- android:layout_marginTop="@dimen/margin_24"-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageNavdr"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/navdr"
        android:cropToPadding="false"
        android:contextClickable="false"
        android:layout_alignParentRight="false"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rellayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_avatar" />

            <ImageView
                android:layout_width="@dimen/textview_size"
                android:layout_height="@dimen/textview_size"
                android:id="@+id/imgtextView"
                android:layout_alignBottom="@+id/rellayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:src="@drawable/ic_brightness_1_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgtextView"
                android:layout_alignEnd="@+id/imgtextView"
                android:layout_alignLeft="@+id/imgtextView"
                android:layout_alignRight="@+id/imgtextView"
                android:layout_alignStart="@+id/imgtextView"
                android:layout_alignTop="@+id/imgtextView"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:fontFamily="@string/font_regular"
                android:text="@string/user_rating"/>

        </RelativeLayout>

        <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fio"
            android:id="@+id/textViewFIO"
            style="@style/font.medium"
            android:textSize="@dimen/fontsize_bigger"
            android:textColor="@color/icon_color"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/textViewEmail"
            style="@style/font.medium"
            android:textSize="@dimen/fontsize_big"
            android:textColor="@color/icon_color"
            android:layout_below="@+id/textViewFIO"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>

